--- a/client/src/components/AccountsTable/AccountsTable.css
+++ b/client/src/components/AccountsTable/AccountsTable.css
@@ -2,18 +2,22 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.accounts-table .accounts-table__heading__created {
+.accounts-table .accounts-table__heading__created-date {
   width: 350px;
 }
 
-.accounts-table .accounts-table__body__row__created .accounts-table__body__row__created__on {
+.accounts-table .accounts-table__body__row__created-date .accounts-table__body__row__created-date__on {
   margin-right: 20px;
 }
 
-.accounts-table .accounts-table__body__row__created .accounts-table__body__row__created__ago {
+.accounts-table .accounts-table__body__row__created-date .accounts-table__body__row__created-date__ago {
   font-style: italic;
 }
 
 .accounts-table .accounts-table__body__row__display-name {
   white-space: nowrap;
+}
+
+.accounts-table .accounts-table__heading__created-by {
+  width: 200px;
 }
