--- a/client/src/components/NamespacesTable/NamespacesTable.css
+++ b/client/src/components/NamespacesTable/NamespacesTable.css
@@ -2,18 +2,22 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.namespaces-table .namespaces-table__heading__created {
+.namespaces-table .namespaces-table__heading__created-date {
   width: 350px;
 }
 
-.namespaces-table .namespaces-table__body__row__created .namespaces-table__body__row__created__on {
+.namespaces-table .namespaces-table__body__row__created-date .namespaces-table__body__row__created-date__on {
   margin-right: 20px;
 }
 
-.namespaces-table .namespaces-table__body__row__created .namespaces-table__body__row__created__ago {
+.namespaces-table .namespaces-table__body__row__created-date .namespaces-table__body__row__created-date__ago {
   font-style: italic;
 }
 
 .namespaces-table .namespaces-table__body__row__namespace-name {
   white-space: nowrap;
+}
+
+.namespaces-table .namespaces-table__heading__created-by {
+  width: 200px;
 }
