--- a/client/src/components/ReleasesTable/ReleasesTable.css
+++ b/client/src/components/ReleasesTable/ReleasesTable.css
@@ -2,15 +2,15 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.releases-table .releases-table__heading__created {
+.releases-table .releases-table__heading__created-date {
   width: 350px;
 }
 
-.releases-table .releases-table__body__row__created .releases-table__body__row__created__on {
+.releases-table .releases-table__body__row__created-date .releases-table__body__row__created-date__on {
   margin-right: 20px;
 }
 
-.releases-table .releases-table__body__row__created .releases-table__body__row__created__ago {
+.releases-table .releases-table__body__row__created-date .releases-table__body__row__created-date__ago {
   font-style: italic;
 }
 
@@ -18,4 +18,8 @@
 .releases-table .releases-table__body__row__service-name,
 .releases-table .releases-table__body__row__version {
   white-space: nowrap;
+}
+
+.releases-table .releases-table__heading__created-by {
+  width: 200px;
 }
