Add deployment log and very rough deployment details page

--- a/client/src/components/DeploymentsTable/DeploymentsTable.css
+++ b/client/src/components/DeploymentsTable/DeploymentsTable.css
@@ -23,3 +23,7 @@
 .deployments-table .deployments-table__heading__created-by {
   width: 200px;
 }
+
+.deployments-table .deployments-table__heading__actions {
+  width: 31px;
+}
