Add cluster to UI

--- a/client/src/components/DeploymentsTable/DeploymentsTable.css
+++ b/client/src/components/DeploymentsTable/DeploymentsTable.css
@@ -15,6 +15,7 @@
 }
 
 .deployments-table .deployments-table__body__row__namespace-name,
+.deployments-table .deployments-table__body__row__cluster-name,
 .deployments-table .deployments-table__body__row__service-name,
 .deployments-table .deployments-table__body__row__version {
   white-space: nowrap;
