Add quick filters to relevant table cells

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,3 +28,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.cellFilterActions {
+  visibility: hidden;
+}
+
+.cellFilterActionsParent:hover .cellFilterActions {
+  visibility: visible;
+}
+
+.clickable {
+  cursor: pointer;
+}
