--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin-ext');
 @import "custom-bootstrap";
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap";
 .App {
   text-align: center;
 }
