moar framing for pages

--- a/client/src/_custom-bootstrap.scss
+++ b/client/src/_custom-bootstrap.scss
@@ -60,4 +60,6 @@ $theme-colors: (
   background-color: #ffffff;
   padding-left: ($spacer * 3) !important;
   padding-right: ($spacer * 3) !important;
+  padding-top: ($spacer * .25) !important;
+  padding-bottom: ($spacer* .5) !important;
 }
