--- a/client/src/_custom-bootstrap.scss
+++ b/client/src/_custom-bootstrap.scss
@@ -41,7 +41,6 @@ $theme-colors: (
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/print";
 
-
 .navbar-dark {
   .navbar-brand {
     color: #b3beef;
@@ -50,6 +49,11 @@ $theme-colors: (
   &.bg-dark {
     background-color: #1d2652 !important;
   }
+}
+
+.card {
+  --webkit-box-shadow: 0px 0px 13px 0px rgba(82, 63, 105, 0.1);
+  box-shadow: 0px 0px 13px 0px rgba(82, 63, 105, 0.1);
 }
 
 .card-header, .card-footer {
@@ -62,4 +66,7 @@ $theme-colors: (
   padding-right: ($spacer * 3) !important;
   padding-top: ($spacer * .25) !important;
   padding-bottom: ($spacer* .5) !important;
+  border-radius: 4px;
+  --webkit-box-shadow: 0px 0px 13px 0px rgba(82, 63, 105, 0.15);
+  box-shadow: 0px 0px 13px 0px rgba(82, 63, 105, 0.15);
 }
