Move secret editor to its own component for sharing. Add & use secrets in cronjobs

--- a/client/src/_custom-bootstrap.scss
+++ b/client/src/_custom-bootstrap.scss
@@ -73,3 +73,5 @@ $theme-colors: (
 
 .min-vh-75 { min-height: 75vh !important; }
 .max-vh-75 { max-height: 75vh !important; }
+.min-vh-50 { min-height: 50vh !important; }
+.max-vh-50 { max-height: 50vh !important; }
