Add cluster export function to enable quick bootstrapping of a cluster given 'last known' state

--- a/client/src/_custom-bootstrap.scss
+++ b/client/src/_custom-bootstrap.scss
@@ -75,3 +75,9 @@ $theme-colors: (
 .max-vh-75 { max-height: 75vh !important; }
 .min-vh-50 { min-height: 50vh !important; }
 .max-vh-50 { max-height: 50vh !important; }
+
+.export-button {
+  font-size: $font-size-base;
+  border: none;
+  vertical-align: top;
+}
